--- a/web/fx/2013s1/sass/_header.scss
+++ b/web/fx/2013s1/sass/_header.scss
@@ -33,6 +33,10 @@ ul.menu,
 	}
 	&.right{
 		text-align: right;
+		.dropdown{
+			left: auto;
+			right: 0;
+		}
 	}
 }
 ul.sub-menu,
